# py-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  DATABASE_ERD.dbml  FASTAPI_BEST_PRACTICES.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-varchar-backed-enums.md  0002-automatic-soft-delete-filter.md  0003-api-audience-namespace-split.md  0004-model-registry-metadata.md  0005-offset-limit-pagination.md
migrations/: env.py
migrations/versions/: 2026-06-12_2f23073050e3_admins_profile_image_key.py  2026-06-12_a4e06ef32e5d_.py
scripts/: seed.py
src/: config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  models.py  pagination.py  query_filters.py  registry.py  schemas.py
src/admins/: models.py  router.py  service.py
src/api/: routers.py
src/auth/: config.py  dependencies.py  models.py  router.py  security.py  service.py
src/logs/: constants.py  models.py
src/modules/admin_auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py
src/modules/admins/: exceptions.py  models.py  router.py  schemas.py  service.py
src/modules/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  (+1 more)
src/rbac/: constants.py  dependencies.py  models.py  service.py
src/storage/: client.py  config.py  constants.py  exceptions.py  schemas.py  service.py
src/users/: constants.py  models.py  schemas.py
tests/: conftest.py  test_admins.py  test_rbac.py  test_security.py  test_storage.py
(+19 files in other folders)
